# fastapi_template

./: .env.example  base.md  docs.md  logger.md  middleware.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py  routes.py
app/application/: orchestrator.py  services.py  unit_of_work.py
app/core/: config.py  di.py  logging.py
app/domain/: commands.py  interfaces.py  models.py
app/infrastructure/db/: errors.py  oracle.py
app/infrastructure/repositories/: user_repository_oracle.py
app/schemas/: user.py
